--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -76,7 +76,13 @@
 
 {% endblock %}
 
-
+{% block footer %}
+<footer class="bg-black small text-center text-white-50">
+  <div class="container">
+    Copyright &copy; Your Website 2019
+  </div>
+</footer>
+{% endblock %}
 
 {% block script %}
   <!-- Custom scripts for this template -->
