--- a/frontend/static/css/base.css
+++ b/frontend/static/css/base.css
@@ -1,27 +1,16 @@
-/* :root {
-  --main: #054269;
+.wrapper {
+    display: flex;
+    width: 100%;
 }
 
-
-
-div#header {
-  height: 100vh;
-  background: url("http://127.0.0.1:8000/static/images/contrail_splash.jpg")no-repeat center center fixed;
-  background-size: 100% 100%;
-  background-attachment: scroll;
+#sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
 }
-
-h1.header {
-  color: white;
-  font-size: 4rem;
-  text-align: center;
-  padding-top: 120px;
-}
-
-div.main {
-  background-color: var(--main);;
-}
-
-div.about {
-  padding-top: 150px;
-} */
