--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -30,7 +30,7 @@
     <link href="{% static "css/grayscale.min.css" %}" rel="stylesheet">
 
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/custom.css' %}"> -->
     {% block css %}{% endblock %}
 </head>
 
