--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -1,107 +1,76 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
+{% endblock %}
+
 
 {% block content %}
 <div class="wrapper">
     <!-- Sidebar -->
     <nav id="sidebar">
-        <!-- <div class="sidebar-header">
-            <h3>Bootstrap Sidebar</h3>
-        </div> -->
-
-        <ul class="list-unstyled components">
-            <p>Dummy Heading</p>
-            <li class="active">
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-                <ul class="collapse list-unstyled" id="homeSubmenu">
-                    <li>
-                        <a href="#">Home 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Home 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Home 3</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">About</a>
-            </li>
-            <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    <li>
-                        <a href="#">Page 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 3</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Portfolio</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-        </ul>
-
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Operating System</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="gpus">GPUs</label>
+            <input type="gpus" class="form-control" id="gpus" aria-describedby="emailHelp" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="vcpus">vCPUs</label>
+            <input type="vcpus" class="form-control" id="vcpus" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="memory">Memory</label>
+            <input type="memory" class="form-control" id="memory" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Example select</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </nav>
-    <!-- Page Content -->
-    <!-- <div id="content">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-
-                <button type="button" id="sidebarCollapse" class="btn btn-info">
-                    <i class="fas fa-align-left"></i>
-                    <span>Toggle Sidebar</span>
-                </button>
-            </div>
-        </nav>
-    </div> -->
-
 
     <!-- Page Content  -->
     <div id="content">
-
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-
-                <button type="button" id="sidebarCollapse" class="btn btn-info">
-                    <i class="fas fa-align-left"></i>
-                    <span>Toggle Sidebar</span>
-                </button>
-                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-justify"></i>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav> -->
         <br><br>
         <button type="button" id="sidebarCollapse" class="btn btn-info">
             <i class="fas fa-align-left"></i>
             <span>Set Attributes</span>
         </button>
+        <br>
+
+        <nav id="subnav" class="navbar navbar-expand-lg navbar-light bg-light">
+              <ul id="subnav" class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">On Demand</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Reserved</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Spot</a>
+                    </li>
+
+              </ul>
+        </nav>
+
         <br><br>
 
         <h2>Collapsible Sidebar Using Bootstrap 4</h2>
