--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,7 +8,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Contrail</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Find prices.</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Find the best virtual machine for you.</h2>
         <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
       </div>
     </div>
@@ -19,10 +19,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">What is Contrail?</h2>
+          <h2 class="text-white mb-4">Contrail</h2>
           <p class="text-white-50">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Having trouble determining what’s the best virtual machine for you? Contrail is a public cloud market price tracker that allows you to easily access and compare the prices and characteristics of VMs over various locations and cloud providers. Filter the results to suit your needs and let Contrail help you decide what is the most affordable and best-suited VM for you!
           </p>
+          <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Find prices</a>
+          <a href="{% url "compare" %}" class="btn btn-primary js-scroll-trigger">Compare prices</a>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -44,8 +46,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Find Prices</h4>
-                <p class="mb-0 text-white-50">Find prices for instances.</p>
+                <h4 class="text-white">See the costs of particular VM types over time.</h4>
+                <p class="mb-0 text-white-50">See the costs of particular VM types over time.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -62,8 +64,44 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Compare Prices</h4>
-                <p class="mb-0 text-white-50">Compare cloud prices.</p>
+                <h4 class="text-white">Compare price differences when VM characteristics change.</h4>
+                <p class="mb-0 text-white-50">Compare price differences when VM characteristics change.</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project One Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="{% static "img/demo-image-01.jpg" %}" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Compare similar VMs across different regions and cloud providers.</h4>
+                <p class="mb-0 text-white-50">Compare similar VMs across different regions and cloud providers.</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="{% static "img/demo-image-02.jpg" %}" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Test out different payment types to see what’s right for you.</h4>
+                <p class="mb-0 text-white-50">Test out different payment types to see what’s right for you.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -79,7 +117,7 @@
 {% block footer %}
 <footer class="bg-black small text-center text-white-50">
   <div class="container">
-    Copyright &copy; Your Website 2019
+    Copyright &copy; Contrail 2019
   </div>
 </footer>
 {% endblock %}
