--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -15,11 +15,16 @@
     <!-- BOOTSTRAP -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
 
+    <!-- Bootstrap Table -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css"></script>
+    <script src="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css"></script>
+
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
     <!-- CHART.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
 
     <!-- Custom fonts for this template -->
     <link href="{% static "vendor/fontawesome-free/css/all.min.css" %}" rel="stylesheet">
@@ -30,7 +35,7 @@
     <link href="{% static "css/grayscale.min.css" %}" rel="stylesheet">
 
     <!-- CUSTOM CSS -->
-    <!-- <link rel="stylesheet" href="{% static 'css/custom.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {% block css %}{% endblock %}
 </head>
 
@@ -75,6 +80,11 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{% static "vendor/jquery/jquery.min.js" %}"></script>
   <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+
+  <!-- Bootstrap Table -->
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+  <script src="">https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js</script>
 
   <!-- Plugin JavaScript -->
   <script src="{% static "vendor/jquery-easing/jquery.easing.min.js" %}"></script>
