--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -10,41 +10,37 @@
 <div class="wrapper">
     <!-- Sidebar -->
     <nav id="sidebar">
-        <form>
+        <form method="POST">
+          {% csrf_token %}
+          {{ form.non_field_errors }}
+          <!-- {{form}} -->
+
           <div class="form-group">
-            <label for="exampleFormControlSelect1">Operating System</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option>Linux</option>
-              <option>RHEL</option>
-              <option>SLES</option>
-              <option>Windows</option>
-              <option>Windows with SQL Standard</option>
-              <option>Windows with SQL Web</option>
-              <option>Windows with SQL Enterprise</option>
-              <option>Linux with SQL Standard</option>
-              <option>Linux with SQL Web</option>
-              <option>Linux with SQL Enterprise</option>
+            <label for="{{ form.operating_system.id_for_label }}">Operating System</label>
+            <select name="{{ form.operating_system.name }}" class="form-control" id="{{ form.operating_system.id_for_label }}">
+              {% for x,y in form.fields.operating_system.choices %}
+                  <option value="{{ x }}"{% if form.fields.operating_system.value == x %}selected{% endif %}>{{ y }}</option>
+              {% endfor %}
             </select>
           </div>
           <div class="filter-group">
             <h4 class="cloudProvider">Cloud Provider </h4>
-            <label class="checkbox-container"> All
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-            </label>
-            <label class="checkbox-container"> AWS
-              <input type="checkbox">
-              <span class="checkmark"></span>
-            </label>
-            <label class="checkbox-container"> MS Azure
-              <input type="checkbox">
-              <span class="checkmark"></span>
-            </label>
+            <input type="checkbox" id="{{ form.aws.id_for_label }}" name="{{ form.aws.name }}">
+            <label for="{{ form.aws.id_for_label }}" class="checkbox-container">AWS</label>
+
+            <input type="checkbox" id="{{ form.gcp.id_for_label }}" name="{{ form.gcp.name }}" type="checkbox">
+            <label for="{{ form.gcp.id_for_label }}" class="checkbox-container">GCP</label>
+
+            <input type="checkbox" id="{{ form.azure.id_for_label }}" name="{{ form.azure.name }}">
+            <label for="{{ form.azure.id_for_label }}" class="checkbox-container">MS Azure</label>
           </div>
           <div class="form-group">
-            <label for="region">Region</label>
-            <select class="form-control" id="region">
-              <option>US East (N. Virgina)</option>
+            <label for="{{ form.region.id_for_label }}">Region</label>
+            <select name="{{ form.region.name }}" class="form-control" id="{{ form.region.id_for_label }}">
+              {% for x,y in form.fields.region.choices %}
+                  <option value="{{ x }}"{% if form.fields.region.value == x %}selected{% endif %}>{{ y }}</option>
+              {% endfor %}
+              <!-- <option>US East (N. Virgina)</option>
               <option>US East (Ohio)</option>
               <option>US West (Norther California)</option>
               <option>US West (Oregon)</option>
@@ -61,20 +57,24 @@
               <option>EU (Stockholm)</option>
               <option>South America (Sao Paulo)</option>
               <option>AWS GovCloud (US-East)</option>
-              <option>AWS GovCloud (US-West)</option>
+              <option>AWS GovCloud (US-West)</option> -->
             </select>
+            <span class="help-block">{{ form.region.errors }}</span>
           </div>
           <div class="form-group">
-            <label for="vcpus">vCPUs</label>
-            <input type="vcpus" class="form-control" id="vcpus" placeholder="">
+            <label for="{{ form.vcpus.id_for_label }}">vCPUs</label>
+            <input name="{{ form.vcpus.name }}" type="number" class="form-control" id="{{ form.vcpus.id_for_label }}" placeholder="">
+            <span class="help-block">{{ form.aws.errors }}</span>
           </div>
           <div class="form-group">
-            <label for="memory">Memory</label>
-            <input type="memory" class="form-control" id="memory" placeholder="">
+            <label for="{{ form.memory.id_for_label }}">Memory</label>
+            <input name="{{ form.memory.name }}" type="number" class="form-control" id="{{ form.memory.id_for_label }}" placeholder="">
+            <span class="help-block">{{ form.memory.errors }}</span>
           </div>
           <div class="form-group">
-            <label for="ecu">ECU</label>
-            <input type="ecu" class="form-control" id="ecu" placeholder="">
+            <label for="{{ form.ecu.id_for_label }}">ECU</label>
+            <input name="{{ form.ecu.name }}" type="number" class="form-control" id="{{ form.ecu.id_for_label }}" placeholder="">
+            <span class="help-block">{{ form.ecu.errors }}</span>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -107,11 +107,128 @@
               </ul>
         </nav>
 
-        <br><br>
+        <br><br><br>
+        <table id="instances" class="table table-striped table-bordered" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Instance</th>
+                        <th>Provider</th>
+                        <th>Operating System</th>
+                        <th>Age</th>
+                        <th>Start date</th>
+                        <th>Salary</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Tiger Nixon</td>
+                        <td>System Architect</td>
+                        <td>Edinburgh</td>
+                        <td>61</td>
+                        <td>2011/04/25</td>
+                        <td>$320,800</td>
+                    </tr>
+                    <tr>
+                        <td>Finn Camacho</td>
+                        <td>Support Engineer</td>
+                        <td>San Francisco</td>
+                        <td>47</td>
+                        <td>2009/07/07</td>
+                        <td>$87,500</td>
+                    </tr>
+                    <tr>
+                        <td>Donna Snider</td>
+                        <td>Customer Support</td>
+                        <td>New York</td>
+                        <td>27</td>
+                        <td>2011/01/25</td>
+                        <td>$112,000</td>
+                    </tr>
+                    <tr>
+                        <td>Haley Kennedy</td>
+                        <td>Senior Marketing Designer</td>
+                        <td>London</td>
+                        <td>43</td>
+                        <td>2012/12/18</td>
+                        <td>$313,500</td>
+                    </tr>
+                    <tr>
+                        <td>Tatyana Fitzpatrick</td>
+                        <td>Regional Director</td>
+                        <td>London</td>
+                        <td>19</td>
+                        <td>2010/03/17</td>
+                        <td>$385,750</td>
+                    </tr>
+                    <tr>
+                        <td>Michael Silva</td>
+                        <td>Marketing Designer</td>
+                        <td>London</td>
+                        <td>66</td>
+                        <td>2012/11/27</td>
+                        <td>$198,500</td>
+                    </tr>
+                    <tr>
+                        <td>Brielle Williamson</td>
+                        <td>Integration Specialist</td>
+                        <td>New York</td>
+                        <td>61</td>
+                        <td>2012/12/02</td>
+                        <td>$372,000</td>
+                    </tr>
+                    <tr>
+                        <td>Herrod Chandler</td>
+                        <td>Sales Assistant</td>
+                        <td>San Francisco</td>
+                        <td>59</td>
+                        <td>2012/08/06</td>
+                        <td>$137,500</td>
+                    </tr>
+                    <tr>
+                        <td>Rhona Davidson</td>
+                        <td>Integration Specialist</td>
+                        <td>Tokyo</td>
+                        <td>55</td>
+                        <td>2010/10/14</td>
+                        <td>$327,900</td>
+                    </tr>
+                    <tr>
+                        <td>Colleen Hurst</td>
+                        <td>Javascript Developer</td>
+                        <td>San Francisco</td>
+                        <td>39</td>
+                        <td>2009/09/15</td>
+                        <td>$205,500</td>
+                    </tr>
+                    <tr>
+                        <td>Sonya Frost</td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr>
+                    <tr>
+                        <td>Jena Gaines</td>
+                        <td>Office Manager</td>
+                        <td>London</td>
+                        <td>30</td>
+                        <td>2008/12/19</td>
+                        <td>$90,560</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Office</th>
+                        <th>Age</th>
+                        <th>Start date</th>
+                        <th>Salary</th>
+                    </tr>
+                </tfoot>
+            </table>
 
-        <h2>Collapsible Sidebar Using Bootstrap 4</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
         <div class="line"></div>
 
@@ -139,6 +256,7 @@
 
 
 {% block script %}
+<!-- SIDE BAR -->
 <script type="text/javascript">
     $(document).ready(function () {
         $("#sidebar").mCustomScrollbar({
@@ -153,6 +271,28 @@
     });
 </script>
 
+<!-- BOOTSTRAP TABLE -->
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#instances').DataTable( {
+        // "paging":   false,
+        // "ordering": false,
+        // "info":     false,
+        // "sPaginationType": "bs_two_button"
+    } );
+    $('#instances_previous').addClass('btn');
+    $('#instances_previous').addClass('btn-primary');
+    $('#instances_next').addClass('btn');
+    $('#instances_next').addClass('btn-primary');
+  } );
+
+  // $(window).load(function() {
+  // })
+
+
+</script>
+
+<!-- CHART.JS -->
 <script type="text/javascript">
   var ctx = document.getElementById('myChart').getContext('2d');
   var chart = new Chart(ctx, {
