table styling, fix api

--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -120,6 +120,15 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- {% for instance in instances %}
+                    <tr>
+                      <td>{{ instance. }}</td>
+                      <td>{{ instance. }}</td>
+                      <td>{{ instance. }}</td>
+                      <td>{{ instance. }}</td>
+                      <td>{{ instance. }}</td>
+                    </tr>
+                    {% endfor %} -->
                     <tr>
                         <td>Tiger Nixon</td>
                         <td>System Architect</td>
@@ -232,18 +241,6 @@
 
         <div class="line"></div>
 
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <div class="line"></div>
-
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <div class="line"></div>
-
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <canvas id="myChart"></canvas>
 
     </div>
@@ -278,12 +275,7 @@
         // "paging":   false,
         // "ordering": false,
         // "info":     false,
-        // "sPaginationType": "bs_two_button"
     } );
-    $('#instances_previous').addClass('btn');
-    $('#instances_previous').addClass('btn-primary');
-    $('#instances_next').addClass('btn');
-    $('#instances_next').addClass('btn-primary');
   } );
 
   // $(window).load(function() {
