--- a/frontend/staticfiles/css/custom.css
+++ b/frontend/staticfiles/css/custom.css
@@ -1,1 +1,38 @@
 /* For custom css */
+#instances_info {
+  padding-bottom: 20px;
+}
+
+a.paginate_button {
+  /* background-color: Crimson;
+  border-radius: 5px; */
+  /* color: white; */
+  padding: .5em;
+  text-decoration: none;
+}
+
+
+a.paginate_button:focus,
+a.paginate_button:hover {
+  cursor: pointer;
+
+}
+
+#instances_previous,
+#instances_next {
+  background-color: Crimson;
+  border-radius: 5px;
+  color: white;
+  padding: .5em;
+  text-decoration: none;
+}
+
+
+#instances_previous:focus,
+#instances_previous:hover,
+#instances_next:focus,
+#instances_next:hover, {
+  background-color: FireBrick;
+  color: White;
+  cursor: pointer;
+}
