--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -81,11 +81,6 @@
   <script src="{% static "vendor/jquery/jquery.min.js" %}"></script>
   <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
 
-  <!-- Bootstrap Table -->
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-  <script src="">https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js</script>
-
   <!-- Plugin JavaScript -->
   <script src="{% static "vendor/jquery-easing/jquery.easing.min.js" %}"></script>
 
@@ -97,6 +92,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   <!-- jQuery Custom Scroller CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+  <!-- Bootstrap Table -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.js"></script> -->
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+  <script src="">https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js</script>
 
   {% block script %}{% endblock %}
 
