--- a/frontend/static/css/grayscale.css
+++ b/frontend/static/css/grayscale.css
@@ -27,7 +27,7 @@
 }
 
 #mainNav .navbar-nav .nav-item:hover {
-  color: fade(black, 80%);
+  color: fade(white, 80%);
   outline: none;
   background-color: transparent;
 }
