--- a/frontend/static/css/sidebar.css
+++ b/frontend/static/css/sidebar.css
@@ -235,6 +235,9 @@ a.article:hover {
   transform: rotate(45deg);
 }
 
+#sidebarCollapse {
+  background-color: #71aaa7;
+}
 
 /* ---------------------------------------------------
     CONTENT STYLE
