--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -47,59 +47,53 @@
 
         <br><br><br>
         <table id="instances" class="table table-striped table-bordered" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>Instance</th>
-                        <!-- <th>Provider</th> -->
-                        <th>Region</th>
-                        <th>Operating System</th>
-                        <th>VCPUs</th>
-                        <th>Memory</th>
-                        <!-- <th>ECU</th> -->
-                        <th>Price Type</th>
-                        <th>Price</th>
-                        <th>Price Unit</th>
-                    </tr>
-                </thead>
-                <tbody>
+          <thead>
+              <tr>
+                  <th>Instance</th>
+                  <!-- <th>Provider</th> -->
+                  <th>Region</th>
+                  <th>Operating System</th>
+                  <th>VCPUs</th>
+                  <th>Memory</th>
+                  <!-- <th>ECU</th> -->
+                  <th>Price Type</th>
+                  <th>Price</th>
+                  <th>Price Unit</th>
+              </tr>
+          </thead>
+          <tbody>
 
-                {% for instance in instances %}
-                  <tr>
-                    <td>{{ instance.instance_type }}</td>
-                    <!-- <td>{{ instance.provider }}</td> -->
-                    <td>{{ instance.region }}</td>
-                    <td>{{ instance.operating_system }}</td>
-                    <td>{{ instance.vcpus }}</td>
-                    <td>{{ instance.memory }}</td>
-                    <!-- <td>{{ instance.ecu }}</td> -->
-                    <td>{% if instance.price_type == 'on_demand' %}on demand{% endif %}</td>
-                    <td>${{ instance.price | floatformat:3 }}</td>
-                    <td>{{ instance.price_unit }}</td>
-                  </tr>
-                  {% endfor %}
+          {% for instance in instances %}
+            <tr>
+              <td><a href="{% url 'instance' id=1 %}">{{ instance.instance_type }}</a></td>
+              <!-- <td>{{ instance.provider }}</td> -->
+              <td>{{ instance.region }}</td>
+              <td>{{ instance.operating_system }}</td>
+              <td>{{ instance.vcpus }}</td>
+              <td>{{ instance.memory }}</td>
+              <!-- <td>{{ instance.ecu }}</td> -->
+              <td>{% if instance.price_type == 'on_demand' %}on demand{% endif %}</td>
+              <td>${{ instance.price | floatformat:3 }}</td>
+              <td>{{ instance.price_unit }}</td>
+            </tr>
+            {% endfor %}
 
-                </tbody>
-                <tfoot>
-                    <tr>
-                      <th>Instance</th>
-                      <!-- <th>Provider</th> -->
-                      <th>Region</th>
-                      <th>Operating System</th>
-                      <th>VCPUs</th>
-                      <th>Memory</th>
-                      <!-- <th>ECU</th> -->
-                      <th>Price Type</th>
-                      <th>Price</th>
-                      <th>Price Unit</th>
-                    </tr>
-                </tfoot>
-            </table>
-
-
-        <div class="line"></div>
-
-        <canvas id="myChart"></canvas>
-
+          </tbody>
+          <tfoot>
+              <tr>
+                <th>Instance</th>
+                <!-- <th>Provider</th> -->
+                <th>Region</th>
+                <th>Operating System</th>
+                <th>VCPUs</th>
+                <th>Memory</th>
+                <!-- <th>ECU</th> -->
+                <th>Price Type</th>
+                <th>Price</th>
+                <th>Price Unit</th>
+              </tr>
+          </tfoot>
+      </table>
     </div>
 
 </div>
@@ -145,33 +139,7 @@
     } );
   } );
 
-  // $(window).load(function() {
-  // })
-
-
 </script>
 
-<!-- CHART.JS -->
-<script type="text/javascript">
-  var ctx = document.getElementById('myChart').getContext('2d');
-  var chart = new Chart(ctx, {
-      // The type of chart we want to create
-      type: 'line',
-
-      // The data for our dataset
-      data: {
-          labels: ["January", "February", "March", "April", "May", "June", "July"],
-          datasets: [{
-              label: "Sample Instance Chart",
-              backgroundColor: 'rgb(255, 99, 132)',
-              borderColor: 'rgb(255, 99, 132)',
-              data: [0, 10, 5, 2, 20, 30, 45],
-          }]
-      },
-
-      // Configuration options go here
-      options: {}
-  });
-</script>
 
 {% endblock %}
