--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -23,11 +23,11 @@
 
 
     <!-- Custom fonts for this template -->
-    <link href="{% static "vendor/fontawesome-free/css/all.min.css" %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/5.0.6/css/grayscale.min.css" rel="stylesheet"> -->
     <link href="{% static "css/grayscale.min.css" %}" rel="stylesheet">
 
     <!-- CUSTOM CSS -->
@@ -73,6 +73,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
+  <!-- Custom styles for this template -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-grayscale/5.0.6/js/grayscale.min.js" crossorigin="anonymous"></script>
+
+
   <!-- jQuery CDN - Slim version (=without AJAX) -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <!-- Popper.JS -->
@@ -85,7 +89,7 @@
   <!-- Bootstrap Table -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.js"></script> -->
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-  <script src="">https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js</script>
+  <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 
   {% block script %}{% endblock %}
 
