--- a/frontend/staticfiles/css/sidebar.css
+++ b/frontend/staticfiles/css/sidebar.css
@@ -239,6 +239,47 @@ a.article:hover {
   background-color: #71aaa7;
 }
 
+#comparebutton {
+  background-color: #71aaa7;
+}
+
+.comparecards {
+  box-sizing: border-box;
+}
+
+.comparecards, .comparecards:before, *:after {
+  box-sizing: inherit;
+}
+
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
